--- a/index.html
+++ b/index.html
@@ -4,63 +4,87 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SafeZone Postproduction</title>
+  <meta name="description" content="Postproduktion mit Liebe zum Detail – SafeZone Postproduction">
+  <meta name="robots" content="index, follow" />
+
   <style>
-    body {
+    * {
       margin: 0;
-      font-family: sans-serif;
-      background: #111;
-      color: #f4f4f4;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Helvetica Neue', sans-serif;
+      background: #0f0f0f;
+      color: #f0f0f0;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 4rem 2rem;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 3rem 1rem;
     }
 
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-
-    .spielbox {
-      width: 300px;
-      height: 300px;
-      background: #333;
-      border-radius: 20px;
-      margin-top: 2rem;
+    /* LOGO-STIL */
+    .logo-container {
+      width: 320px;
+      height: 180px;
+      background: #000;
+      -webkit-mask-image: url('logo.png');
+      mask-image: url('logo.png');
+      -webkit-mask-repeat: no-repeat;
+      mask-repeat: no-repeat;
+      -webkit-mask-position: center;
+      mask-position: center;
+      -webkit-mask-size: contain;
+      mask-size: contain;
       transition: background 0.6s ease;
+      cursor: pointer;
+      margin-bottom: 3rem;
     }
 
-    .spielbox:hover {
-      background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
+    .logo-container:hover {
+      background: linear-gradient(135deg, #d1155c, #f58447);
     }
 
-    .cursor-dot {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 12px;
-      height: 12px;
-      background: #fda085;
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 1000;
-      mix-blend-mode: lighten;
-      transform: translate(-50%, -50%);
+    /* Weitere Inhalte */
+    h1 {
+      font-size: 2.4rem;
+      margin-bottom: 1rem;
+      text-align: center;
+    }
+
+    p {
+      font-size: 1.1rem;
+      text-align: center;
+      max-width: 600px;
+      line-height: 1.6;
+    }
+
+    @media (max-width: 600px) {
+      .logo-container {
+        width: 240px;
+        height: 135px;
+      }
+
+      h1 {
+        font-size: 1.8rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
-<body>
-  <h1>SafeZone Postproduction</h1>
-  <p>Hover über das Element unten oder bewege deine Maus!</p>
-  <div class="spielbox"></div>
-  <div class="cursor-dot" id="cursor-dot"></div>
 
-  <script>
-    const dot = document.getElementById('cursor-dot');
-    document.addEventListener('mousemove', e => {
-      dot.style.left = e.pageX + 'px';
-      dot.style.top = e.pageY + 'px';
-    });
-  </script>
+<body>
+  <!-- LOGO OBEN -->
+  <div class="logo-container" title="SafeZone Postproduction"></div>
+
+  <!-- Optionaler Einstiegstext -->
+  <h1>Willkommen bei SafeZone Postproduction</h1>
+  <p>Wir bringen eure Ideen in Form – kreativ, detailverliebt und technisch präzise. Scroll bald weiter oder klick auf Dinge – hier bewegt sich noch mehr.</p>
 </body>
 </html>
