--- a/index.html
+++ b/index.html
@@ -4,35 +4,90 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SafeZone Postproduction</title>
-  <meta name="description" content="Postproduktion mit Liebe zum Detail – SafeZone Postproduction">
+  <meta name="description" content="Postproduktion mit Liebe zum Detail – SafeZone Postproduction" />
   <meta name="robots" content="index, follow" />
-
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Helvetica Neue', sans-serif;
       background: #0f0f0f;
       color: #f0f0f0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      padding: 3rem 1rem;
+      scroll-behavior: smooth;
     }
 
-    /* LOGO-STIL */
+    /* Navigation */
+    .navbar {
+      position: sticky;
+      top: 0;
+      background: rgba(15, 15, 15, 0.95);
+      padding: 1rem 2rem;
+      z-index: 999;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+    }
+    .nav-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .logo {
+      font-weight: bold;
+      color: #f58447;
+      font-size: 1.2rem;
+    }
+    .menu-toggle {
+      display: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: #fff;
+    }
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+    }
+    .nav-links a {
+      text-decoration: none;
+      color: #f0f0f0;
+      font-weight: 500;
+    }
+    .nav-links a:hover {
+      color: #f58447;
+    }
+    @media (max-width: 768px) {
+      .menu-toggle { display: block; }
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        gap: 1rem;
+        background: #111;
+        position: absolute;
+        right: 2rem;
+        top: 70px;
+        padding: 1rem;
+        border-radius: 8px;
+      }
+      .nav-links.show { display: flex; }
+    }
+
+    /* Sections */
+    section { padding: 6rem 2rem; }
+    .inner { max-width: 1000px; margin: 0 auto; }
+
+    /* Home */
+    #home {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
     .logo-container {
       width: 320px;
       height: 180px;
       background: #000;
-      -webkit-mask-image: url('logo.png');
-      mask-image: url('logo.png');
+      -webkit-mask-image: url('logo.webp');
+      mask-image: url('logo.webp');
       -webkit-mask-repeat: no-repeat;
       mask-repeat: no-repeat;
       -webkit-mask-position: center;
@@ -40,51 +95,202 @@
       -webkit-mask-size: contain;
       mask-size: contain;
       transition: background 0.6s ease;
-      cursor: pointer;
-      margin-bottom: 3rem;
     }
-
     .logo-container:hover {
       background: linear-gradient(135deg, #d1155c, #f58447);
     }
 
-    /* Weitere Inhalte */
-    h1 {
-      font-size: 2.4rem;
-      margin-bottom: 1rem;
+    /* Wer sind wir */
+    .section-diagonal {
+      background: linear-gradient(135deg, #d1155c, #f58447);
+      transform: skewY(-6deg);
+      color: #fff;
+    }
+    .section-diagonal .inner { transform: skewY(6deg); }
+    .section-diagonal h2 {
+      font-size: 2.5rem;
       text-align: center;
+      margin-bottom: 2rem;
+    }
+    .intro-text {
+      font-size: 1.1rem;
+      line-height: 1.7;
+      margin-bottom: 3rem;
+    }
+    .infoboxes {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
+    .box {
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 16px;
+      padding: 1.5rem;
+    }
+    .box:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
+    .icon {
+      font-size: 2rem;
+      display: block;
+      margin-bottom: 0.5rem;
     }
 
-    p {
-      font-size: 1.1rem;
+    /* Was tun wir */
+    .section-white {
+      background: #ffffff;
+      color: #111;
+    }
+    .section-white h2 {
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
       text-align: center;
-      max-width: 600px;
+    }
+    .section-white .intro-text {
+      font-size: 1.2rem;
+      line-height: 1.7;
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+    .category { margin-bottom: 3rem; }
+    .category h3 {
+      font-size: 1.4rem;
+      margin-bottom: 1rem;
+      color: #d1155c;
+    }
+    .category ul { padding-left: 1.2rem; }
+    .category li {
+      margin-bottom: 0.8rem;
       line-height: 1.6;
     }
 
-    @media (max-width: 600px) {
-      .logo-container {
-        width: 240px;
-        height: 135px;
-      }
-
-      h1 {
-        font-size: 1.8rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
+    /* Kontakt */
+    .section-contact {
+      background: #0f0f0f;
+      color: #fff;
+      text-align: center;
     }
+    .section-contact h2 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .main-contact {
+      font-size: 1.2rem;
+      margin-bottom: 3rem;
+    }
+    .section-contact a {
+      color: #f58447;
+      text-decoration: none;
+    }
+    .team-contacts {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+    }
+    .profile-card {
+      background: #1a1a1a;
+      padding: 2rem;
+      border-radius: 16px;
+      max-width: 280px;
+      text-align: center;
+    }
+    .profile-card img {
+      width: 100%;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+    }
+    .profile-card h3 {
+      margin: 0.5rem 0 0.2rem;
+      font-size: 1.3rem;
+    }
+    .profile-card p {
+      margin: 0 0 1rem;
+      font-size: 1rem;
+      color: #ccc;
+    }
+    .profile-card a {
+      display: block;
+      font-size: 0.95rem;
+      margin-bottom: 0.3rem;
+      word-break: break-word;
+    }
+
+    /* Footer */
+    .legal-section {
+      background: #1a1a1a;
+      color: #ddd;
+      font-size: 0.95rem;
+      line-height: 1.7;
+    }
+    .legal-section h2 {
+      font-size: 1.6rem;
+      margin-bottom: 1rem;
+      color: #fff;
+    }
+    .legal-section a {
+      color: #f58447;
+      text-decoration: none;
+    }
+
+    /* Scroll to top */
+    #topBtn {
+      display: none;
+      position: fixed;
+      bottom: 40px;
+      right: 30px;
+      z-index: 999;
+      font-size: 20px;
+      background-color: #f58447;
+      color: white;
+      border: none;
+      padding: 12px 16px;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      transition: background 0.3s ease;
+    }
+    #topBtn:hover { background-color: #d1155c; }
   </style>
 </head>
-
 <body>
-  <!-- LOGO OBEN -->
-  <div class="logo-container" title="SafeZone Postproduction"></div>
+  <!-- Navigation -->
+  <nav class="navbar">
+    <div class="nav-inner">
+      <div class="logo">SAFEZONE</div>
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+      <ul class="nav-links" id="navLinks">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#wer-sind-wir">Wer sind wir?</a></li>
+        <li><a href="#was-tun-wir">Was tun wir?</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
+        <li><a href="#datenschutz">Datenschutz</a></li>
+        <li><a href="#impressum">Impressum</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <!-- Optionaler Einstiegstext -->
-  <h1>Willkommen bei SafeZone Postproduction</h1>
-  <p>Wir bringen eure Ideen in Form – kreativ, detailverliebt und technisch präzise. Scroll bald weiter oder klick auf Dinge – hier bewegt sich noch mehr.</p>
+  <!-- Weitere Inhalte folgen hier (Home, Abschnitte, etc.) -->
+
+  <!-- Scroll to Top Button -->
+  <button onclick="topFunction()" id="topBtn" title="Nach oben">↑</button>
+
+  <!-- JavaScript -->
+  <script>
+    function toggleMenu() {
+      document.getElementById("navLinks").classList.toggle("show");
+    }
+    window.onscroll = function () {
+      const btn = document.getElementById("topBtn");
+      if (document.body.scrollTop > 400 || document.documentElement.scrollTop > 400) {
+        btn.style.display = "block";
+      } else {
+        btn.style.display = "none";
+      }
+    };
+    function topFunction() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+  </script>
 </body>
 </html>
