--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       50% { transform: translateY(8px); }
     }
     .scrolled .logo-container {
-      background: linear-gradient(135deg, #d1155c, #f58447);
-    }
+  display: none;
+}
 
     /* Wer sind wir */
     .section-diagonal {
@@ -168,7 +168,7 @@
 
   <!-- Home Section -->
   <section id="home">
-  <div class="logo-container" title="SafeZone Postproduction"></div>
+  <img src="logo.png" alt="SafeZone Logo" style="width: 300px; height: auto;">
   <div class="scroll-indicator">↓</div>
 </section>
 
