--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Helvetica Neue', sans-serif;
-      background: #0f0f0f;
-      color: #f0f0f0;
-      scroll-behavior: smooth;
-    }
+  font-family: 'Helvetica Neue', sans-serif;
+  background: #ffffff;
+  color: #0f0f0f;
+  scroll-behavior: smooth;
+  min-height: 100vh;
+}
 
     /* Navigation */
     .navbar {
@@ -172,7 +173,59 @@
   <div class="scroll-indicator">↓</div>
 </section>
 
-  <!-- Scroll to Top Button -->
+  <!-- Wer sind wir? Section -->
+  <section id="wer-sind-wir" class="section-diagonal">
+    <div class="inner">
+      <h2>Wer sind wir?</h2>
+      <p class="intro-text">
+        Gute Kampagnen entstehen nicht von allein. Gute Prozesse auch nicht.<br>
+        Wenn vieles gleichzeitig passieren muss, halten wir die Fäden zusammen. Wir koordinieren, strukturieren, priorisieren – und sorgen dafür, dass aus vielen Einzelteilen ein starkes Ganzes wird.<br><br>
+        Wir sind Möglichmacher:innen, Sparringspartner und kreative Ordnungsfanatiker – mit einem wachen Blick fürs große Ganze und einem klaren Gespür fürs Detail.<br>
+        Wir bleiben konzentriert, wenn’s eng wird – und beweglich, wenn sich was ändert.<br><br>
+        Ob für Marken, Agenturen oder Kolleg:innen:<br>
+        Gute Arbeit braucht nicht nur Talent und gute Ideen, sondern auch ein stabiles Umfeld. Genau das schaffen wir. Wir liefern nicht einfach ab. Wir liefern Qualität.
+      </p>
+
+      <div class="infoboxes">
+        <div class="box">
+          <div class="icon">🧭</div>
+          <strong>SafeZone für Kund:innen</strong><br>
+          Weil wir den Überblick behalten – und Verantwortung übernehmen.<br>
+          Wir strukturieren, priorisieren und kommunizieren.
+        </div>
+
+        <div class="box">
+          <div class="icon">⚙️</div>
+          <strong>SafeZone für Projekte</strong><br>
+          Weil wir früh mitdenken, klar steuern und sauber abliefern.<br>
+          Komplexität schreckt uns nicht ab – sie motiviert uns.
+        </div>
+
+        <div class="box">
+          <div class="icon">👥</div>
+          <strong>SafeZone für Kolleg:innen und Geschäftspartner</strong><br>
+          Weil gutes Arbeiten mit gutem Miteinander beginnt.<br>
+          Offene Kommunikation, gegenseitiges Vertrauen und ein respektvoller Umgang auf Augenhöhe.
+        </div>
+
+        <div class="box">
+          <div class="icon">🧪</div>
+          <strong>SafeZone für Qualität</strong><br>
+          Weil wir dafür sorgen, dass die Qualität bis zur Auslieferung stimmt.<br>
+          Präzise, verantwortungsvoll – und auf dem Qualitätsniveau, das unsere Kund:innen erwarten und die Projekte verdienen.
+        </div>
+
+        <div class="box">
+          <div class="icon">📈</div>
+          <strong>SafeZone für Entwicklung</strong><br>
+          Weil wir nicht nur liefern, sondern besser werden wollen – mit jedem Projekt.<br>
+          Wir hinterfragen Prozesse, optimieren Strukturen und integrieren neue Technologien – dort, wo sie echten Mehrwert bringen.
+        </div>
+      </div>
+    </div>
+  </section>
+
+$1
   <button onclick="topFunction()" id="topBtn" title="Nach oben">↑</button>
 
   <!-- JavaScript -->
