--- a/index.html
+++ b/index.html
@@ -150,28 +150,15 @@
       transition: background 0.3s ease;
     }
     #topBtn:hover { background-color: #d1155c; }
-    .logo-hover {
-    width: 300px;
-    height: auto;
-    aspect-ratio: 3/2;
-    background: #000;
-    -webkit-mask-image: url('logo.png');
-    mask-image: url('logo.png');
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-position: center;
-    mask-position: center;
-    -webkit-mask-size: contain;
-    mask-size: contain;
-    transition: background 0.6s ease;
-  }
+    $1
+}
 
   .logo-hover:hover {
     background: linear-gradient(135deg, #d1155c, #f58447);
   }
 
 $1
-</head>
+  </style>$2
 <body>
   <!-- Navigation -->
   <nav class="navbar">
